Fix issue: white space on contact form

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -31,7 +31,7 @@
 div.ui.container{
     margin-left:0rem !important;
     margin-right:0rem !important;
-    padding-top:20px;
+    padding-top: 30px;
     margin-top: -5px;
     .icon-link {
         height: max-content!important;
